Add quasar for fiber actor; Add build.xml; Update cque.jar;